Update f12copy command

--- a/cmd/f12format/Makefile
+++ b/cmd/f12format/Makefile
@@ -1,5 +1,8 @@
 test:
 	cd ../gosk && go build
-	cd ../../ && ./cmd/gosk/gosk testdata/03_day_harib00i_ipl10.nas ipl10.bin
+	cd ../f12copy && go build
 	go build
+	cd ../../ && ./cmd/gosk/gosk testdata/03_day_harib00f_ipl.nas ipl10.bin
+	cd ../../ && ./cmd/gosk/gosk testdata/03_day_harib00f_haribote.nas haribote.sys
 	./f12format -f 1440 -B ../../ipl10.bin -i ../../output.img
+	../f12copy/f12copy -f ../../haribote.sys -i ../../output.img
